--- a/build.gradle
+++ b/build.gradle
@@ -69,8 +69,8 @@ android {
     defaultConfig {
         minSdkVersion 25
         targetSdkVersion 30
-        versionCode 7
-        def versionDisplayName = "11.0 Alpha 6.1"
+        versionCode 64
+        def versionDisplayName = "version 2"
         def majorVersion = versionDisplayName.split("\\.")[0]
         versionName "${versionDisplayName} (${commitHash()})"
         buildConfigField "String", "VERSION_DISPLAY_NAME", "\"${versionDisplayName}\""
